--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx ts-node ./src/index.ts",
+    "ss": "node --loader ts-node/esm ./src/index.ts -v",
     "s": "npx ts-node ./src/test.ts"
   },
   "author": "",
@@ -13,11 +14,13 @@
     "chalk": "^4.1.2",
     "fs-extra": "^10.0.0",
     "lodash.isplainobject": "^4.0.6",
+    "meow": "^10.1.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/lodash.isplainobject": "^4.0.6"
-  }
+  },
+  "type": "module"
 }
