--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
     "lodash.isplainobject": "^4.0.6",
     "meow": "^10.1.1",
     "ts-node": "^10.4.0",
