--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "forceConsistentCasingInFileNames": true,
     "downlevelIteration": true,
     "moduleResolution": "Node",
-    "outDir": "./dist/"
+    "outDir": "./dist/",
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["./src"]
 }
