--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "downlevelIteration": true,
     "moduleResolution": "Node",
     "outDir": "./dist/",
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./types", "jest"]
   },
   "include": ["./src"]
 }
