--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "start": "node --loader ts-node/esm ./src/index.ts ./src/source.json",
     "build": "npx tsc",
     "deploy_to_npm": "npm run build && npm publish && git add . && git commit -m \"deploy to npm\" && git push",
+    "test": "npx jest",
     "s": "npx ts-node ./src/test.ts",
     "t": "npx ts-node ./src/t.ts"
   },
@@ -64,7 +65,10 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^27.0.3",
     "@types/lodash.isplainobject": "^4.0.6",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
